--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "aria-query": "^5.1.3",
         "bitmovin-player": "^8.98.0",
         "bitmovin-player-ui": "^3.39.0",
+        "dotenv": "^16.0.3",
         "electron": "^22.0.0",
         "express": "^4.18.2",
         "jquery": "^3.6.1",
