--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "express": "^4.18.2",
         "jquery": "^3.6.1",
         "node-fetch": "^2.6.7",
+        "shaka-player": "^4.3.1",
         "typescript": "^4.9.4"
     },
     "devDependencies": {
