--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "electron": "^22.0.0",
         "express": "^4.18.2",
         "jquery": "^3.6.1",
+        "mux.js": "^6.2.0",
         "node-fetch": "^2.6.7",
         "shaka-player": "^4.3.1",
         "typescript": "^4.9.4"
