--- a/package.json
+++ b/package.json
@@ -1,26 +1,60 @@
 {
-    "name": "homemade_f1mv",
+    "name": "homemade_f1mv_react",
     "version": "0.1.0",
-    "main": "electron.js",
     "private": true,
     "dependencies": {
-        "aria-query": "^5.1.3",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.18.9",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
         "dotenv": "^16.0.3",
-        "electron": "^22.0.0",
         "express": "^4.18.2",
-        "jquery": "^3.6.1",
+        "jquery": "^3.6.2",
         "mux.js": "^6.2.0",
-        "node-fetch": "^2.6.7",
-        "shaka-player": "^4.3.1",
-        "typescript": "^4.9.4"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.5.0",
+        "react-scripts": "5.0.1",
+        "shaka-player": "^4.3.2",
+        "typescript": "^4.9.4",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start:web": "react-scripts start",
+        "start:desktop": "pnpm build:web && pnpm build:desktop && cp src/layouts.json build/layouts.json && mkdir build/assets && cp assets/* build/assets/ && electron ./build/electron.js && rm -rf build/",
+        "build:web": "PUBLIC_URL=./ react-scripts build",
+        "build:desktop": "tsc -p electron/tsconfig.json",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     },
     "devDependencies": {
-        "@types/express": "^4.17.14",
+        "@babel/core": "^7.20.5",
+        "@babel/plugin-syntax-flow": "^7.18.6",
+        "@babel/plugin-transform-react-jsx": "^7.19.0",
+        "@testing-library/dom": "^8.19.0",
+        "@types/express": "^4.17.15",
         "@types/jquery": "^3.5.14",
-        "@types/node-fetch": "^2.6.2",
-        "@typescript-eslint/eslint-plugin": "^5.46.0",
-        "@typescript-eslint/parser": "^5.46.0",
-        "electron-packager": "^17.1.1",
-        "eslint": "^8.29.0"
+        "electron": "^22.0.0"
     }
 }
