Storing the token in variables.json

--- a/.gitignore
+++ b/.gitignore
@@ -195,7 +195,7 @@ dist
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,macos
 
-variables.ts
+variables.json
 
 Homemade*
 
