--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
         "@types/node": "^16.18.9",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
+        "delay": "^5.0.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "jquery": "^3.6.2",
         "mux.js": "^6.2.0",
+        "puppeteer": "^19.4.1",
+        "puppeteer-extra": "^3.3.4",
+        "puppeteer-extra-plugin-stealth": "^2.11.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.5.0",
@@ -57,6 +61,8 @@
         "@testing-library/dom": "^8.19.0",
         "@types/express": "^4.17.15",
         "@types/jquery": "^3.5.14",
-        "electron": "^22.0.0"
+        "electron": "^22.0.0",
+        "ts-node": "^10.9.1",
+        "tsconfig-paths": "^4.1.1"
     }
 }
