--- a/package.json
+++ b/package.json
@@ -11,21 +11,35 @@
         "@types/node": "^16.18.9",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
+        "@types/signalr-no-jquery": "^0.1.3",
         "delay": "^5.0.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "http": "0.0.1-security",
+        "https": "^1.0.0",
+        "https-browserify": "^1.0.0",
         "jquery": "^3.6.2",
         "mux.js": "^6.2.0",
+        "node-signalr": "^2.0.6",
+        "pako": "^2.1.0",
         "puppeteer": "^19.4.1",
         "puppeteer-extra": "^3.3.4",
         "puppeteer-extra-plugin-stealth": "^2.11.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-json-tree": "^0.17.0",
         "react-router-dom": "^6.5.0",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "shaka-player": "^4.3.2",
+        "signalr-client": "^0.0.20",
+        "signalr-no-jquery": "^0.2.0",
+        "stream-http": "^3.2.0",
         "typescript": "^4.9.4",
-        "web-vitals": "^2.1.4"
+        "url": "^0.11.0",
+        "util": "^0.12.5",
+        "utils": "^0.3.1",
+        "web-vitals": "^2.1.4",
+        "ws": "^8.11.0"
     },
     "scripts": {
         "start:web": "react-scripts start",
@@ -33,6 +47,8 @@
         "build:web": "PUBLIC_URL=./ react-scripts build",
         "build:desktop": "tsc -p electron/tsconfig.json",
         "build:prod": "pnpm build:web && pnpm build:desktop && cp src/layouts.json build/layouts.json && mkdir build/assets && cp assets/* build/assets/ && cp package.json ./build/package.json && electron-packager . Homemade_F1MV --platform=win32 --arch=x64 --ignore=/node_modules",
+        "dev:electron": "rm -rf build/ && pnpm run build:desktop && cp src/layouts.json build/layouts.json && cp src/variables.json build/variables.json && mkdir build/assets && cp assets/* build/assets/ && RUN_ENV=\"dev\" electron build/electron.js",
+        "dev:react": "react-scripts start",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
@@ -61,6 +77,7 @@
         "@testing-library/dom": "^8.19.0",
         "@types/express": "^4.17.15",
         "@types/jquery": "^3.5.14",
+        "@types/pako": "^2.0.0",
         "electron": "^22.0.0",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.1"
