--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "delay": "^5.0.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "fs": "0.0.1-security",
         "http": "0.0.1-security",
         "https": "^1.0.0",
         "https-browserify": "^1.0.0",
@@ -39,6 +40,7 @@
         "util": "^0.12.5",
         "utils": "^0.3.1",
         "web-vitals": "^2.1.4",
+        "write-file-p": "^1.0.8",
         "ws": "^8.11.0"
     },
     "scripts": {
